--- a/public/style/style.css
+++ b/public/style/style.css
@@ -41,10 +41,7 @@ h3 {
 h1 {
   font-family: 'adineue PRO Cyr Bold Web';
   letter-spacing: 1.5px;
-  /* margin-right: 710px; */
   float: left;
-  /* text-align: center; */
-  margin-left: 8%;
   margin-bottom: 40px;
   margin-top: 50px;
 }
@@ -67,21 +64,26 @@ h1 {
   font-family: 'adineue PRO Cyr Light Web';
   font-size: 11px;
   background: black;
+  display: flex;
+  flex-direction: row;
 }
 
 .search {
   font-family: 'adihaus';
   float: right;
-  margin-top: -25px;
+  margin-top: 0px;
   margin-right: 30px;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .search input {
   display: block;
   padding: 2px;
   width: 100px;
+  height: 28px;
   font-size: 12px;
   border: none;
   text-decoration: none;
@@ -108,6 +110,7 @@ button:focus {
 }
 
 .card:hover {
+  cursor: pointer;
   border: 1px solid black;
   border-radius: 0px;
 }
@@ -117,8 +120,14 @@ button:focus {
   margin-left: -10px;
 }
 
+.like {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 130px;
+}
+
 #likes {
-  /* padding: 5px 5px 5px 5px; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -137,6 +146,13 @@ button:focus {
 
 #like-price {
   font-size: 12px;
+}
+
+#carouselLikes {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .navbar-nav {
@@ -186,6 +202,15 @@ button:focus {
   cursor: pointer;
 }
 
+.choices span:hover {
+  cursor: pointer;
+}
+
+.choices span {
+  font-family: 'adihaus';
+  margin-right: 2px;
+}
+
 #fbold:hover {
   cursor: pointer;
   color: #000000 !important;
@@ -194,10 +219,11 @@ button:focus {
 
 .choices {
   font-size: 15px;
-  margin-top: -30px;
-  margin-left: 140px;
+  margin-top: 0px;
+  margin-left: 5px;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .white {
@@ -218,7 +244,7 @@ button:focus {
   font-size: 14px;
   letter-spacing: 3px;
   height: 45px;
-  width: 550px;
+  width: 510px;
 }
 
 .selected {
@@ -243,6 +269,11 @@ button:focus {
 .product {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.title-1000 {
+  width: 1000px;
 }
 
 .container {
@@ -266,10 +297,12 @@ button:focus {
 
 .shoe-desc {
   margin-top: 5%;
+  margin-left: 4%;
+  max-width: 525px;
 }
 
 .shoe-img {
-  margin-left: 17%;
+  margin-left: 16%;
 }
 
 .para {
@@ -382,6 +415,10 @@ button:focus {
   color: #000;
 }
 
+.carousel-indicators {
+  margin-bottom: -100px;
+}
+
 .carousel-indicators li {
     display: inline-block;
     width: 20px;
@@ -389,9 +426,9 @@ button:focus {
     margin: 3px;
     text-indent: 0;
     cursor: pointer;
-    /* border: none; */
     background-color: #000;
 }
+
 .carousel-indicators .active {
     width: 20px;
     height: 5px;
@@ -403,140 +440,42 @@ button:focus {
 }
 
 .carousel-control-next {
-  position: absolute;
-  top: 7%;
-  right: 9%;
-  margin-top: -12px;
-  cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+  right: inherit;
+  margin-right: -200px;
+  width: 20px;
 }
 
 .carousel-control-prev {
-  position: absolute;
-  top: 7%;
-  left: 9%;
-  margin-top: -12px;
-  cursor: pointer;
-  margin-left: -2px;
+  display: flex;
+  justify-content: flex-start;
+  left: inherit;
+  width: 20px;
 }
 
-@media (max-width: 1430px) {
-  .carousel-control-next {
-    position: absolute;
-    top: 7%;
-    right: 7%;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .carousel-control-prev {
-    position: absolute;
-    top: 7%;
-    left: 7%;
-    margin-top: -12px;
-    cursor: pointer;
-  }
+.controls {
+  display: flex;
+  justify-content: center;
+  width: 1004px;
+  margin-top: -600px;
 }
 
-@media (max-width: 1200px) {
-  .carousel-control-next {
-    float: right;
-    margin-right: -65px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .carousel-control-prev {
-    float: left;
-    margin-left: -65px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .shoe-desc {
-    margin-top: 5%;
-    margin-right: 0px;
-    margin-left: -80px;
-  }
-
-  .share-photo {
-    display: flex;
-    float:left;
-    margin-left: 40px !important;
-  }
+.control-row {
+  width: 502px;
+  height: 400px;
 }
 
-@media (max-width: 1160px) {
-  .carousel-control-next {
-    margin-right: -85px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .carousel-control-prev {
-    margin-left: -85px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .shoe-desc {
-    margin-top: 5%;
-    margin-right: 0px;
-    margin-left: -60px;
-  }
-
-  .share-photo {
-    display: flex;
-    float:left;
-    margin-left: 10px !important;
-  }
+.control-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -100px;
 }
 
-@media (max-width: 1080px) {
-  .carousel-control-next {
-    margin-right: -105px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .carousel-control-prev {
-    margin-left: -105px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .shoe-desc {
-    margin-top: 5%;
-    margin-right: 0px;
-    margin-left: -40px;
-  }
-}
-
-@media (max-width: 1005px) {
-  .carousel-control-next {
-    margin-right: -130px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .carousel-control-prev {
-    margin-left: -130px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-}
-
-@media (max-width: 930px) {
-  .carousel-control-next {
-    margin-right: -100px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
-
-  .carousel-control-prev {
-    margin-left: -100px;
-    margin-top: -12px;
-    cursor: pointer;
-  }
+.next-pos {
+  margin-left: 0px;
+  flex-direction: row-reverse;
 }
 
 .select-size-menu {
@@ -722,8 +661,10 @@ button:focus {
 
 .cart {
   background-color: #0071ae;
-  padding: 2px;
+  padding: 5px;
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
 }
 
 .cart:hover {
@@ -736,7 +677,7 @@ button:focus {
 }
 
 .cartNum {
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .material-icons {
@@ -744,15 +685,24 @@ button:focus {
 }
 
 .share {
-  margin-left: 8%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.share-desc{
   font-family: 'adihaus', sans-serif;
-  margin-top: -25px;
+  font-size: 18px;
+  float: left;
 }
 
 .share-photo {
   display: flex;
-  float:left;
-  margin-left: 105px;
+  justify-content: center;
+  margin-left: -90px;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 .share-photo li {
@@ -774,7 +724,60 @@ button:focus {
   width: 501px;
 }
 
-.overlay-blk:hover {
-  opacity: 0.3;
-  text-content: "hello";
+.overlay-blk {
+  background-color: #202020;
+}
+
+.overlay-blk:hover img{
+  background-color: black;
+  opacity: 0.2;
+  transition: opacity .2s cubic-bezier(.3,0,1,1);
+}
+
+.share-username{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -50%;
+  font-family: 'adihaus', sans-serif;
+  color: white;
+  margin-bottom: 41%;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+@media (max-width: 1200px) {
+  .shoe-desc {
+    margin-top: 5%;
+    margin-left: -5% !important;
+    max-width: 520px;
+  }
+}
+
+@media (max-width: 1080px) {
+  .shoe-desc {
+    margin-top: 5%;
+    margin-left: -2% !important;
+    max-width: 520px;
+  }
+
+  .title-1000 {
+    max-width: 95%;
+  }
+}
+
+@media (max-width: 930px) {
+  .carousel-control-next {
+    margin-right: -100px;
+    margin-top: -12px;
+    cursor: pointer;
+  }
+
+  .carousel-control-prev {
+    margin-left: -100px;
+    margin-top: -12px;
+    cursor: pointer;
+  }
 }
