--- a/public/style/style.css
+++ b/public/style/style.css
@@ -46,6 +46,14 @@ h1 {
   margin-top: 50px;
 }
 
+a {
+  opacity: 100 !important;
+}
+
+button {
+  box-shadow: none;
+}
+
 .navbar {
   padding: 0rem 8rem 2rem;
   background-color: black;
@@ -137,12 +145,13 @@ button:focus {
 }
 
 #like-type {
-  font-size: 11px;
-  color: gray;
+  font-size: 12px;
+  color: #767677;
 }
 
 #like-name {
   font-size: 12px;
+  letter-spacing: 0.04em;
 }
 
 #like-price {
@@ -199,8 +208,32 @@ button:focus {
   cursor: pointer;
 }
 
-.choices li:hover {
+.choices {
+  font-size: 15px;
+  margin-top: 0px;
+  margin-left: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.choices li {
+  margin-top: 10px;
+  padding: 10px 2px 10px 2px;
+  margin-right: -5px;
+  /* padding-top: 10px; */
+  /* padding-bottom: 10px; */
+}
+
+.gray {
+  color: #767677;
+  cursor: default;
+}
+
+.choice-menu:hover {
   cursor: pointer;
+  background-color: white;
+  color: #000000 !important;
 }
 
 .choices span:hover {
@@ -216,15 +249,6 @@ button:focus {
   cursor: pointer;
   color: #000000 !important;
   background-color: white !important;
-}
-
-.choices {
-  font-size: 15px;
-  margin-top: 0px;
-  margin-left: 5px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
 }
 
 .white {
@@ -321,7 +345,12 @@ button:focus {
 }
 
 #fbold {
-  font-family: 'adineue PRO Cyr Bold Web';
+  font-family: 'adineue PRO Cyr Bold Web' !important;
+}
+
+.bold {
+  font-family: 'adineue PRO Cyr Bold Web' !important;
+  letter-spacing: 0.05em !important;
 }
 
 .col-sm li {
@@ -379,6 +408,10 @@ button:focus {
   margin-right: 20px;
 }
 
+.carousel-item {
+  transition: -webkit-transform 0.3s ease-in-out;
+}
+
 .carousel-item img {
   max-height: 237px;
   max-width: 237px;
@@ -409,15 +442,30 @@ button:focus {
 }
 
 .carousel-control-next-icon:after {
+  opacity: 100;
   color: #000;
 }
 
 .carousel-control-prev-icon:after {
+  opacity: 100;
+  color: #000;
+}
+
+.carousel-control-next-icon:before {
+  opacity: 100;
+  background-color: white;
+  color: #000;
+}
+
+.carousel-control-prev-icon:before {
+  opacity: 100;
+  background-color: white;
   color: #000;
 }
 
 .carousel-indicators {
   margin-bottom: -100px;
+  color: #000000;
 }
 
 .carousel-indicators li {
@@ -428,6 +476,16 @@ button:focus {
     text-indent: 0;
     cursor: pointer;
     background-color: #000;
+    /* transform-origin: 50% 100%;
+    transition: height .1s cubic-bezier(.3,0,.45,1); */
+    opacity: 100;
+}
+
+.carousel-indicators li:hover {
+  width: 20px;
+  height: 5px;
+  background-color: #000000;
+  color: #000000;
 }
 
 .carousel-indicators .active {
@@ -437,14 +495,14 @@ button:focus {
 }
 
 .carousel-indicators .inactive {
-    background-color: #000;
+    background-color: #000000;
 }
 
 .carousel-control-next {
   display: flex;
   justify-content: flex-end;
   right: inherit;
-  margin-right: -200px;
+  /* margin-right: 1%; */
   width: 20px;
 }
 
@@ -453,12 +511,13 @@ button:focus {
   justify-content: flex-start;
   left: inherit;
   width: 20px;
+  /* margin-left: 1px; */
 }
 
 .controls {
   display: flex;
   justify-content: center;
-  width: 1004px;
+  width: 1000px;
   margin-top: -600px;
 }
 
@@ -527,26 +586,98 @@ button:focus {
   border-top-color: #dddddd;
 }
 
-#look-shirt-name {
+.dropdown:hover .bar-menu {
+    display: block;
+}
+
+.dropdown:hover #men-dropdown {
+  cursor: pointer;
+  background-color: white;
+  color: #000000 !important;
+}
+
+.dropdown:hover #women-dropdown {
+  cursor: pointer;
+  background-color: white;
+  color: #000000 !important;
+}
+
+.dropdown:hover #kids-dropdown {
+  cursor: pointer;
+  background-color: white;
+  color: #000000 !important;
+}
+
+.bar-menu {
+  outline: none !important;
+  background-color: white;
+  border: 1px solid transparent !important;
+  min-width: 1100px;
+  height: 100%;
+  left: 0;
+  margin-top: 2%;
+}
+
+#women-dropdown .menu-men {
+  height: 400px !important;
+  margin-left: -300px !important;
+}
+
+.headline {
+  font-family: 'adineue PRO Cyr Bold Web' !important;
+  font-size: 18px !important;
+  text-transform: uppercase;
+}
+
+.col-5 li {
+  font-family: 'adihaus', sans-serif;
+  font-size: 13px;
+  padding: 0px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  letter-spacing: 0.01em;
+}
+
+.col-5 li:hover {
+  text-decoration: underline;
+}
+
+.col-5 {
+  /* margin-right: -300px; */
+  padding: 0;
+  max-width: 200px;
+}
+
+.menu-men {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  left: 0;
+  margin-left: -150px;
+  background-color: white;
+  width: 100%;
+}
+
+.choice-menu .dropdown-menu {
+  background-color: white;
+  width: 500px;
+}
+
+.look-clothing-name {
   font-family: 'adineue PRO Cyr Bold Web';
   letter-spacing: 2px;
 }
 
-#look-shirt-price {
+.look-clothing-price {
   font-family: 'adihaus', sans-serif;
   margin-bottom: 20px;
 }
 
-#shirtView {
+#shirtView, #jacketView, #pantView   {
   border-top: 1px solid #DCDCDC;
-}
-
-#jacketView {
-  border-top: 1px solid #DCDCDC;
-}
-
-#pantView {
-  border-top: 1px solid #DCDCDC;
+  width: 470px;
 }
 
 .look-desc {
@@ -560,6 +691,30 @@ button:focus {
 .look-card {
   height: 130px;
   border-bottom: 0px solid #000000;
+}
+
+.enabled:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 55%;
+  width: 240px;
+  height: 45px;
+  box-shadow: inset 0 0 0 1px #000000;
+  transform: translate(3px,3px);
+}
+
+.disabled:after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 55%;
+  width: 240px;
+  height: 45px;
+  box-shadow: inset 0 0 0 1px #767677;
+  transform: translate(3px,3px);
 }
 
 .bottom-bold {
@@ -612,7 +767,6 @@ button:focus {
   width: 240px;
   margin-top: 10px;
   box-sizing: border-box;
-  box-shadow: inset 0 0 0 1px #767677;
 }
 
 .disabled {
@@ -749,6 +903,54 @@ button:focus {
   visibility: hidden;
 }
 
+.wishlist {
+  display: flex !important;
+  /* align-items: flex-end; */
+  position: relative;
+  justify-content: center;
+  /* justify-content: space-between; */
+  /* margin-top: -95%; */
+  /* margin-bottom: 80%; */
+  /* margin-right: 4%; */
+  padding: 10px;
+}
+
+.hearts{
+  width: 1000px;
+  height: 380px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: -33%;
+}
+
+.heart-box {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.wishlist:hover {
+  color: black;
+}
+
+.fa, .far {
+  height: 10px;
+  width: 10px;
+  color: #767677;
+  font-size: 0.58em;
+}
+
+.rating {
+  color: #767677;
+  font-size: 12px;
+  line-height: 10px;
+  padding-left: 5px;
+}
+
+.rating-review {
+  padding-top: 8px;
+}
+
 @media (max-width: 1200px) {
   .shoe-desc {
     margin-top: 5%;
@@ -769,15 +971,16 @@ button:focus {
   }
 }
 
-@media (max-width: 930px) {
+@media (max-width: 1003px) {
   .carousel-control-next {
-    margin-right: -100px;
+    right:8px;
+    margin-right: 0;
     margin-top: -12px;
     cursor: pointer;
   }
 
   .carousel-control-prev {
-    margin-left: -100px;
+    left:8px;
     margin-top: -12px;
     cursor: pointer;
   }
